--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-    "name": "Enquetes",
-    "description": "Enquetes for favorite foods.",
-    "repository": "https://github.com/progedu/node-js-http-3016",
-    "logo": "",
-    "keywords": ["node"],
-    "image": "heroku/nodejs"
-  }
+  "name": "todoapp",
+  "description": "creat todolist",
+  "repository": "https://github.com:ogwk/todoapp",
+  "logo": "",
+  "keywords": ["node"],
+  "image": "heroku/nodejs"
+}
