--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
@@ -29,6 +30,6 @@
     "sequelize": "^6.5.0"
   },
   "engines": {
-  "node": "~10"
+    "node": "~10"
   }
 }
